--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,19 @@
 Package: placement
 Type: Package
-Title: Tools for accessing the Google Maps API
-Version: 0.1.0
+Title: Tools for Accessing the Google Maps API
+Version: 0.1.1
 Author: Derek Darves
 Maintainer: Derek Darves <darves@gmail.com>
-Description: The main functions in this package are \code{\link{drive_time}}
-	(used for calculating distances between physical addresses) and
-	\code{\link{geocode_url}} (used for estimating lat/long coordinates
-	of a physical address). At the time this package was authored, there were no
-	readily available packages which generated the cryptogric signatures necessary for
-	making API calls with a (paid) Google for Work account within the geocoding process itself
-	(hence the motivation for it's authorship). These paid accounts have much large quota limits than
-	the "standard_api" and, thus, placement may be useful for indivuals who
-	would prefer to submit large batch jobs to the Google Maps API from within R.
-	While the main benefit of this package is it's ability to generate properly signed
-	URLs with the \code{\link{digest::hmac}} sha1 algorithm, it also provides methods
-	for accessing the standard API using a (free) Google API key
-	(see \href{https://developers.google.com/maps/documentation/javascript/get-api-key#get-an-api-key}{this page} to obtain a key).
-License: GPL-3 + file LICENSE
+Description: The main functions in this package are drive_time
+	(used for calculating distances between physical addresses or coordinates) and
+	geocode_url (used for estimating the lat/long coordinates
+	of a physical address). Optionally, it generates the cryptographic signatures necessary
+	for making API calls with a Google for Work/Premium account within the geocoding process.
+	These accounts have larger quota limits than the "standard_api" and, thus, this package
+	may be useful for individuals seeking to submit large batch jobs within R to the Google Maps API.
+	Placement also provides methods for accessing the standard API using a (free) Google API key
+	(see: <https://developers.google.com/maps/documentation/javascript/get-api-key#get-an-api-key>).
+License: MIT + file LICENSE
 LazyData: TRUE
 Imports:
     RCurl,
@@ -26,4 +22,6 @@ Imports:
     digest,
     urltools,
     stringi
+URL: https://github.com/derekyves/placement
+BugReports: https://github.com/derekyves/placement/issues
 RoxygenNote: 5.0.1
